--- a/db/Lab2_140L.lpc.html
+++ b/db/Lab2_140L.lpc.html
@@ -16,7 +16,7 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
-<TD >fb_adder1|fu_adder4</TD>
+<TD >fu_adder4</TD>
 <TD >3</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -32,7 +32,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >fb_adder1|fu_adder3</TD>
+<TD >fu_adder3</TD>
 <TD >3</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -48,7 +48,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >fb_adder1|fu_adder2</TD>
+<TD >fu_adder2</TD>
 <TD >3</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -64,7 +64,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >fb_adder1|fu_adder1</TD>
+<TD >fu_adder1</TD>
 <TD >3</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -73,22 +73,6 @@
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >fb_adder1</TD>
-<TD >25</TD>
-<TD >14</TD>
-<TD >9</TD>
-<TD >14</TD>
-<TD >16</TD>
-<TD >14</TD>
-<TD >14</TD>
-<TD >14</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
